# cat_charity_fund

./: README.md  fastapi.db  pyproject.toml  requirements.txt  test.db  test.db-journal  trash_requirements.txt
alembic/versions/: 7ac181baf838_first.py
app/: constants.py  main.py
app/api/: routers.py  validators.py
app/api/endpoints/: __init__.py  charity_project.py  donation.py  user.py
app/core/: base.py  config.py  init_db.py  user.py
app/crud/: base.py  charity_project.py  donation.py
app/exceptions/: charity_project.py  errors_detail.py
app/models/: __init__.py  base.py  charity_project.py  donation.py  user.py
app/schemas/: charity_project.py  donation.py  user.py
app/utils/: investing.py
