[tool.poetry]
name = "qrkot"
version = "1.0"
description = "Благотворительный фонд для котиков"
authors = ["KuzIlya <KuznetsovIlyaDM@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
SQLAlchemy = "^2.0.34"
fastapi-users-db-sqlalchemy = "^6.0.1"
fastapi-users = "^13.0.0"
pydantic = "^2.9.1"
aiosqlite = "^0.20.0"
uvicorn = "^0.30.6"
mixer = "^7.2.2"
alembic = "^1.13.2"
isort = "^5.13.2"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
pytest = "7.1.3"
pytest-asyncio = "0.23.4"
pytest-lazy-fixture = "0.6.3"
pytest-freezegun = "0.4.2"
asgiref = "3.5.2"
mccabe = "0.6.1"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
pycodestyle = "2.8.0"
pyflakes = "2.4.0"
pyparsing = "3.0.9"
pytest-pythonpath = "0.7.3"
setuptools = "^74.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
